// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-document-version-prevent-cleanup should allow cleanup for a document version 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`update-document-version-prevent-cleanup should handle non-existent version ID 1`] = `
{
  "content": [
    {
      "text": "{"status":404,"detail":"Not Found"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`update-document-version-prevent-cleanup should prevent cleanup for a document version 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
